--- a/.github/workflows/test_exporters_common.yml
+++ b/.github/workflows/test_exporters_common.yml
@@ -11,6 +11,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  UV_SYSTEM_PYTHON: 1
+  UV_TORCH_BACKEND: auto
   TRANSFORMERS_IS_CI: true
 
 jobs:
@@ -34,10 +36,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install optimum-onnx@git+https://github.com/huggingface/optimum-onnx.git
-          pip install .[tests]
+          pip install --upgrade pip uv
+          uv pip install optimum-onnx@git+https://github.com/huggingface/optimum-onnx.git@namespace-command-loading
+          uv pip install .[tests]
 
       - name: Test with pytest
         run: |
