--- a/.github/workflows/test_pipelines.yml
+++ b/.github/workflows/test_pipelines.yml
@@ -37,9 +37,17 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip uv
-          uv pip install --no-cache-dir optimum-onnx[onnxruntime]@git+https://github.com/huggingface/optimum-onnx.git
+          uv pip install --no-cache-dir optimum-onnx[onnxruntime]@git+https://github.com/huggingface/optimum-onnx.git@namespace-command-loading
           uv pip install --no-cache-dir .[tests]
 
       - name: Test with pytest
+        run: |
+          pytest tests/pipelines -vvvv --durations=0
+
+      - name: Install dependencies (editable mode)
+        run: |
+          uv pip install -e .[tests]
+
+      - name: Test with pytest (editable mode)
         run: |
           pytest tests/pipelines -vvvv --durations=0
