--- a/.github/workflows/test_pipelines.yml
+++ b/.github/workflows/test_pipelines.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Checkout optimum
         uses: actions/checkout@v4
         with:
+          folder: optimum
           fetch-depth: 0
 
       - name: checkout optimum-onnx
@@ -37,6 +38,7 @@ jobs:
         with:
           repository: huggingface/optimum-onnx
           ref: ${{ env.OPTIMUM_ONNX_REF }}
+          folder: optimum-onnx
           fetch-depth: 0
 
       - name: Setup Python ${{ matrix.python-version }}
