--- a/.github/workflows/test_cli.yml
+++ b/.github/workflows/test_cli.yml
@@ -22,14 +22,15 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.9]
-        run-on: [ubuntu-22.04, macos-13, windows-2022]
+        runs-on: [ubuntu-22.04, macos-13, windows-2022]
 
     runs-on: ${{ matrix.runs-on }}
 
     steps:
-      - name: Checkout code
+      - name: Checkout optimum
         uses: actions/checkout@v4
         with:
+          folder: optimum
           fetch-depth: 0
 
       - name: checkout optimum-onnx
@@ -37,6 +38,7 @@ jobs:
         with:
           repository: huggingface/optimum-onnx
           ref: ${{ env.OPTIMUM_ONNX_REF }}
+          folder: optimum-onnx
           fetch-depth: 0
 
       - name: Setup Python ${{ matrix.python-version }}
