--- a/.github/workflows/test_exporters_common.yml
+++ b/.github/workflows/test_exporters_common.yml
@@ -1,4 +1,4 @@
-name: Exporters Common / Python - Test
+name: Exporters Common / Python - Test - Subpackage (ONNX)
 
 on:
   push:
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.9]
-        runs-on: [ubuntu-22.04]
+        runs-on: [ubuntu-22.04, macos-13, windows-2022]
 
     runs-on: ${{ matrix.runs-on }}
 
