--- a/.github/workflows/build_main_documentation.yml
+++ b/.github/workflows/build_main_documentation.yml
@@ -34,16 +34,6 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          repository: "huggingface/optimum-habana"
-          path: optimum-habana
-
-      - uses: actions/checkout@v2
-        with:
-          repository: "huggingface/optimum-intel"
-          path: optimum-intel
-
-      - uses: actions/checkout@v2
-        with:
           repository: "huggingface/optimum-amd"
           path: optimum-amd
 
@@ -66,22 +56,6 @@ jobs:
           pip install --upgrade pip uv
           uv pip install git+https://github.com/huggingface/doc-builder
 
-      - name: Make Intel documentation
-        run: |
-          cd optimum-intel
-          uv pip install . nncf openvino neural-compressor[pt]>3.4 diffusers accelerate
-          make doc BUILD_DIR=intel-doc-build VERSION=${{ env.VERSION }}
-          sudo mv intel-doc-build ../optimum
-          cd ..
-
-      - name: Make Habana documentation
-        run: |
-          sudo docker system prune -a -f
-          cd optimum-habana
-          make doc BUILD_DIR=habana-doc-build VERSION=${{ env.VERSION }}
-          sudo mv habana-doc-build ../optimum
-          cd ..
-
       - name: Make AMD documentation
         run: |
           sudo docker system prune -a -f
@@ -100,7 +74,7 @@ jobs:
       - name: Combine subpackage documentation
         run: |
           cd optimum
-          sudo python docs/combine_docs.py --subpackages nvidia amd intel neuron tpu habana furiosa executorch onnx --version ${{ env.VERSION }}
+          sudo python docs/combine_docs.py --subpackages nvidia amd intel habana neuron tpu furiosa executorch onnx --version ${{ env.VERSION }}
           cd ..
 
       - name: Push to repositories
