--- a/.github/workflows/build_main_documentation.yml
+++ b/.github/workflows/build_main_documentation.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Combine subpackage documentation
         run: |
           cd optimum
-          sudo python docs/combine_docs.py --subpackages nvidia amd intel habana neuron tpu furiosa executorch onnx --version ${{ env.VERSION }}
+          sudo python docs/combine_docs.py --subpackages nvidia amd habana intel neuron tpu furiosa executorch onnx --version ${{ env.VERSION }}
           cd ..
 
       - name: Push to repositories
