--- a/.github/workflows/test_utils.yml
+++ b/.github/workflows/test_utils.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip uv
+          python -m pip install --upgrade pip uv
           uv pip install .[tests]
 
       - name: Tests needing datasets
