--- a/.github/workflows/test_gptq.yml
+++ b/.github/workflows/test_gptq.yml
@@ -42,6 +42,6 @@ jobs:
             --volume ${{ github.workspace }}:/workspace
             --workdir /workspace
           run: |
-            pip install gptqmodel
             pip install .[tests]
+            pip install gptqmodel --no-build-isolation
             pytest tests/gptq -s -vvvv --durations=0
