--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Make Optimum documentation
         run: |
           cd optimum
-          uv pip install . accelerate
+          uv pip install . accelerate --prerelease=allow
           make doc BUILD_DIR=optimum-doc-build VERSION=pr_$PR_NUMBER
           cd ..
 
