--- a/.github/workflows/test_utils.yml
+++ b/.github/workflows/test_utils.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip uv
-          uv pip install .[tests]
+          uv pip install .[tests] --prerelease=allow
 
       - name: Tests needing datasets
         run: |
