--- a/.github/workflows/test_gptq.yml
+++ b/.github/workflows/test_gptq.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           pip install --upgrade pip uv
           uv pip install .[tests]
-          uv install "gptqmodel>=5.6.12" --no-build-isolation
+          uv pip install "gptqmodel>=5.6.12" --no-build-isolation
 
       - name: Run tests
         run: |
