Fully deprecate AutoGPTQ for GPT-QModel (#2385)
* call hf_select_quant_linear_v2()

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* Remove the import of auto_gptq

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* Remove the import of auto_gptq in unittests

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* Fixed the incorrect layer_output when using the latest version of transformers.

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* use assertEqual instead of assertTrue

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* load_quantized_model() remove "disable_exllama" and "exllama_config" arguments

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* fix gptq unittest

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* fix gptq unittest

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* setting offload_to_disk=False

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* remove auto_gptq

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* format

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* format

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* fix

* fix

* remove ExllamaV1 Test

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>

* update ci

* test

* avoid uv

* re-enable uv and pin to >= 5.6.12

* Update .github/workflows/test_gptq.yml

Co-authored-by: Ilyas Moutawwakil <57442720+IlyasMoutawwakil@users.noreply.github.com>

---------

Signed-off-by: ZX-ModelCloud <zx@modelcloud.ai>
Co-authored-by: IlyasMoutawwakil <moutawwakil.ilyas.tsi@gmail.com>
Co-authored-by: Qubitium-ModelCloud <qubitium@modelcloud.ai>
Co-authored-by: Ilyas Moutawwakil <57442720+IlyasMoutawwakil@users.noreply.github.com>

--- a/.github/workflows/test_gptq.yml
+++ b/.github/workflows/test_gptq.yml
@@ -18,30 +18,35 @@ on:
     # every day at midnight
     - cron: "0 0 * * *"
 
+env:
+  UV_SYSTEM_PYTHON: 1
+  HF_HOME: /mnt/cache/
+  TRANSFORMERS_IS_CI: true
+
 jobs:
   test_gptq:
     runs-on:
       group: aws-g6-4xlarge-plus
 
+    container:
+      image: nvidia/cuda:12.8.1-cudnn-devel-ubuntu22.04
+      options: --gpus all --shm-size 16G --volume /mnt/cache/:/mnt/cache/
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run tests
-        uses: addnab/docker-run-action@v3
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          image: pytorch/pytorch:2.2.2-cuda12.1-cudnn8-runtime
-          # latest auto-gptq was built with pytorch 2.2 and cuda 12.1
-          options: |
-            --rm
-            --gpus all
-            --shm-size 16G
-            --env RUN_SLOW=1
-            --env HF_HOME=/mnt/cache/
-            --volume /mnt/cache/:/mnt/cache/
-            --volume ${{ github.workspace }}:/workspace
-            --workdir /workspace
-          run: |
-            pip install auto-gptq
-            pip install -e .[tests]
-            pytest tests/gptq -s -vvvv --durations=0
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pip uv
+          uv pip install .[tests]
+          uv pip install "gptqmodel>=5.6.12" --no-build-isolation
+
+      - name: Run tests
+        run: |
+          pytest tests/gptq -s -vvvv --durations=0
