--- a/.github/workflows/test_common.yml
+++ b/.github/workflows/test_common.yml
@@ -2,7 +2,7 @@ name: Common / Python - Test
 
 on:
   push:
-    branches: [main]
+    branches: [main, v*-release]
   pull_request:
     branches: [main]
 
